# radix-community-projects

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT-CALENDAR.md  LICENSE  NEXT-STEPS.md  PROPOSAL-DRAFT.md  README.md  SWEEP_REPORT.md  ecosystem.config.js  portal-nextjs-dashboard.tsx  portal-nextjs-proposals.tsx
.claude/: launch.json
agent-tools/: .env.example  README.md  package.json
badge-manager/: README.md
badge-manager/scrypto/task-escrow/: Cargo.toml  DEPLOY.md
badge-manager/scrypto/task-escrow/manifests/: cancel_task.rtm  create_task.rtm
badge-manager/scrypto/task-escrow/src/: lib.rs
badge-manager/scrypto/task-escrow/tests/: escrow_test.rs
bot/: README.md  db.js  index.js  package-lock.json  package.json  wizard.js  wizards.js
dao-manager/: README.md
docs/: 7-DAY-PLAN.md  API-BOUNTIES.md  API-REFERENCE.md  BADGE-ARCHITECTURE.md  BADGE-SCHEMAS.md  BEST-PRACTICES.md  BETA-CHECKLIST.md  BOT-COMMANDS.md  BOUNTY-ADMIN.md  BOUNTY-ESCROW.md  BOUNTY-SYSTEM.md  CHARTER-PROPOSALS.md  COMMUNITY-ROADMAP.md  CV2-DEPLOY-GUIDE.md  CV2-DEPLOYMENT-PLAN.md  CV2-INTEGRATION.md  DAO-KIT.md  DAO-STRUCTURE-PLAN.md  DECISION-TREE.md  DECISIONS-PLAN.md  DECISIONS.md  DEPLOYMENT-CHECKLIST.md  ESCROW-V3-DESIGN.md  FEDERATION-OPS.md  GUILD-BUSINESS-PLAN.md  HANDOVER-COMPLETE.md  HANDOVER.md  HOW-IT-WORKS.md  IDENTITY-DESIGN.md  INCEPTION.md  INCIDENTS.md  INFRASTRUCTURE.md  LAUNCH-POST.md  MARKET-ANALYSIS.md  MARKETPLACE-PLAN.md  MVD-SETUP.md  ONBOARDING.md  OUTCOME-RECORDER.md  OUTREACH-PLAN.md  PROPOSAL-OUTCOMES.md  (+12 more)
grid-game/: .env.example  README.md  (+5 more)
(+407 files in other folders)
