[package]
name = "task-escrow"
version = "1.0.0"
edition = "2021"

[dependencies]
scrypto = { version = "1.3.1" }

[dev-dependencies]
scrypto-test = { version = "1.3.1" }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true
overflow-checks = true

[features]
default = []

[lib]
crate-type = ["cdylib", "lib"]

[workspace]
